# storybot

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/v1.1-phases/10-test-coverage/: 10-VALIDATION.md
.planning/phases/03-improve-emoji-picker-ux-in-admin-replace-keystroke-based-emoji-input-in-admin-panel-with-visual-picker/: 03-01-SUMMARY.md
.planning/phases/12-parameter-cards/: 12-VALIDATION.md
.planning/phases/16-kiosk-ux-library-jetson-verification/: 16-03-SUMMARY.md  16-04-SUMMARY.md
.planning/phases/27-pairing-audio-routing/: 27-07-SUMMARY.md
.planning/phases/33-led-behaviors-child-safety/: 33-01-SUMMARY.md
.planning/phases/34-on-device-jetson-validation-deployment/: 34-01-SUMMARY.md  34-03-SUMMARY.md  34-HUMAN-UAT.md
.planning/phases/35-gpio-service-foundation-config-led-animation/: 35-03-SUMMARY.md  35-04-SUMMARY.md
app/: bt_boot_reconnect.py  config.py  dependencies.py  main.py
app/models/: bt.py  capability.py  card.py  generated.py  story.py  system.py  updates.py  wifi.py
app/routers/: bt.py  capabilities.py  cards.py  generate.py  generated.py  nfc.py  printer.py  stories.py  system.py  updates.py  wifi.py
app/services/: audio_player.py  base.py  bt_agent.py  bt_audio.py  bt_manager.py  bt_monitor.py  bt_store.py  capability_probe.py  cover_prompt_builder.py  event_hub.py  generated_sweeper.py  gpio_dispatcher.py  gpio_handler.py  hardware_manager.py  led_animator.py  led_controller.py  led_effects.py  led_spi.py  nfc_handler.py  platform_detect.py  printer_handler.py  sentence_buffer.py  session_manager.py  story_generator.py  story_manager.py  swap_orchestrator.py  system_control.py  tts_engine.py  tts_pipeline.py  update_manager.py  wifi_manager.py
content/: config.json
content/stories/: stories.json
deploy/: 10-storybot-bt.pkla  10-storybot-wifi.pkla  50-pcscd.rules  bluetooth-audio-notes.md  bluetooth-audio.service  download-models.sh  install.sh  install_llama_server.sh  install_sd_cover.sh  jetson-orin-nano-nvme-cold-boot-fix.md  led-uat-checklist.md  led_selftest.py  llama-server.service  setup-wifi-ap.sh  storybot-bt-boot.service  storybot-kiosk.service  storybot-nfc-reset.service  storybot-nginx.conf  storybot-reset-nfc.sh  storybot-rollback.sh  storybot.service
docs/: guia_profesoras_robot_cuentacuentos.docx  plan_robot_cuentacuentos.md  tira_led_jetson_nano_orin.excalidraw
scripts/: bench_llm.py  bench_sd.py  bluetooth-connect.sh  convert_paul_to_gsd.py  dev-server.sh  gpio_wiring_test.py  install_llama_server.sh  install_sd_cover.sh  jetson_rss_sampler.sh  modifica_zram.sh  preview_prompts.py  render_bridge_audio.py  sd_cover_worker.py  user.js  verify_hardware.sh
sitioweb/: index.php
sitioweb/css/: styles.css
sitioweb/js/: main.js
static/admin/: index.html  script.js  styles.css
static/children/: index.html  script.js  styles.css
static/shared/: theme.css
tests/: conftest.py  test_admin_gating.py  test_basic.py  test_card_model.py  test_cards_api.py  test_install_script.py  test_kiosk_gating.py  test_session.py  test_updates_ui.py
tests/test_admin/: test_bt_admin_js.py
tests/test_api/: test_api_capability_parity.py  test_bridge_audio_assets.py  test_bt.py  test_bt_models.py  test_bt_status_health.py  test_capabilities.py  test_generate.py  test_generate_cover.py  test_generate_latency.py  test_generated_routes.py  test_led_latency.py  test_led_state.py  test_lifespan.py  test_lifespan_capability.py  test_nfc.py  test_pages.py  test_printer_route.py  test_session.py  test_stories.py  test_system.py  test_system_platform.py  test_updates.py  test_wifi.py
tests/test_deploy/: test_bt_boot_unit.py  test_spi_install.py
tests/test_models/: test_capability_profile.py
tests/test_services/: test_audio.py  test_bt_agent.py  test_bt_audio.py  test_bt_boot_reconnect.py  test_bt_manager.py  test_bt_monitor.py  test_bt_store.py  test_capability_probe.py  test_config.py  test_cover_prompt_builder.py  test_event_hub.py  test_generated_sweeper.py  test_gpio_config.py  test_gpio_dispatcher.py  test_gpio_handler.py  test_hardware_manager.py  test_led.py  test_led_animator.py  test_led_config.py  test_led_effects.py  test_led_spi.py  test_nfc.py  test_platform_detect.py  test_printer_handler.py  test_sentence_buffer.py  test_story_generator.py  test_story_manager.py  test_story_manager_promote.py  test_swap_orchestrator.py  test_system_control.py  test_tts.py  test_tts_pipeline.py  test_update_manager.py  test_wifi_manager.py
