[project]
name = "storybot"
version = "0.1.0"
description = "Storytelling robot for children using local AI models"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "ollama>=0.1.0",
    "simpleaudio>=1.0.4",
    "nfcpy>=1.0.4",
    "brother-ql>=0.9.0",
    "pyserial>=3.5",
    "pillow>=10.2.0",
    "python-dotenv>=1.0.0",
    "jsonschema>=4.21.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
# Jetson dependencies - these should only be installed on the Jetson device
# NOT on development machines (x86_64)
# Install with: uv sync --extra jetson (on Jetson only)
jetson = [
    "pycuda>=2022.1; platform_machine=='aarch64'",
    "cuda-python>=12.6; platform_machine=='aarch64'",
    "cupy-cuda12x>=12.0; platform_machine=='aarch64'",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "opencv-contrib-python>=4.8.0",
    "pygobject>=3.44.0; platform_machine=='aarch64'",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "tensorrt>=10.3; platform_machine=='aarch64'",
    "onnx>=1.15.0",
    "onnxruntime-gpu>=1.16.0",
    "transformers>=4.35.0",
    "diffusers>=0.25.0",
    "accelerate>=0.25.0",
    "safetensors>=0.4.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0; platform_machine=='aarch64'",
    "triton>=2.1.0",
    "xformers>=0.0.23",
    "jetson-stats>=4.2; platform_machine=='aarch64'",
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "black>=23.12.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
